Move to zeit.web namespace

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZEIT Frontend Components",
+  "name": "ZEIT Web Components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
