--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "freewall": "1.0.4",
-    "jquery": "1.11.1",
+    "bx-slider.js": "~4.2.3",
+    "freewall": "1.0.5",
+    "jquery": "1.11.2",
     "modernizr": "2.8.3",
-    "normalize.css": "3.0.1",
-    "requirejs": "2.1.15",
-    "sjcl": "1.0.0",
+    "normalize.css": "3.0.2",
+    "requirejs": "2.1.16",
+    "sjcl": "1.0.2",
     "jquery.inview": "1.0.0"
   },
   "exportsOverride": {
+    "bx-slider.js": {
+      "js": "dist/jquery.bxslider.js"
+    },
     "modernizr": {
       "js": "modernizr.js"
     }
