ZON-1437: Our test folder split up and moved

--- a/.coveragerc
+++ b/.coveragerc
@@ -3,4 +3,6 @@ directory=htdocs/coverage
 
 [run]
 omit = 
-    */zeit/web/test/*
+    */zeit/web/core/test/*
+    */zeit/web/magazin/test/*
+    */zeit/web/site/test/*
