--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,8 @@ Gemfile.lock
 /javascript/documentation/
 /javascript/vendor/
 /node_modules/
-/sass/web.magazin/icons-minified/
-/sass/web.site/icons-minified/
+/sass/web.*/icons/_minified/
+/sass/web.*/svg/_minified/
 /sass/vendor/
 setuptools_git-*
 src/*.egg-info
