--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "requirejs": "2.1.18",
     "sjcl": "1.0.3",
     "jquery.inview": "1.0.0",
-    "svg4everybody": "1.0.0"
+    "svg4everybody": "1.0.0",
+    "velocity": "~1.2.2"
   },
   "exportsOverride": {
     "bx-slider.js": {
